# build-llm-from-scratch

./: Makefile  README.md  analyse_verdict_data.py  get_data.py  pyproject.toml  simple_tokenizer_v1.py  simple_tokenizer_v2.py  token_embeddings_example.py
scripts/: analyse_verdict_data.py  data_sampling_example.py  simple_self_attention.py  tiktoken_example.py  trainable_self_attention.py
src/build_llm_from_scratch/: __init__.py  gpt_dataset_v1.py  self_attention_v1.py  simple_tokenizer_v1.py  simple_tokenizer_v2.py
tests/: sample.py  test_gpt_dataset_v1.py  test_self_attention_v1.py  test_simple_tokenizer_v1.py  test_simple_tokenizer_v2.py
