[project]
name = "build-llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.3.4", "tiktoken>=0.12.0", "torch>=2.9.0"]

[dependency-groups]
dev = ["inline-snapshot>=0.31.0", "pytest>=8.4.2"]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"
