[project]
name = "build-llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Lua Nowacki Scavacini Santilli", email = "luasantilli@gmail.com" },
]
requires-python = ">=3.12"
dependencies = ["numpy>=2.3.4", "tiktoken>=0.12.0", "torch>=2.9.0"]

[dependency-groups]
dev = ["inline-snapshot>=0.31.0", "pytest>=8.4.2", "ruff>=0.14.2"]

[project.scripts]
build-llm-from-scratch = "build_llm_from_scratch:main"

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
